--- a/css/style.css
+++ b/css/style.css
@@ -8875,7 +8875,8 @@ h1, h2, h3, h4, h5,
   .progress-wrap h3 {
     font-size: 20px;
     margin-bottom: 10px;
-    font-weight: 500; }
+    font-weight: 500; 
+    text-align: center;}
 
 .progress {
   height: 10px;
